--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section class="content">
     <h1>Pokedex</h1>
 
-    <ol class="pokemons">
+    <ol id="pokemonList" class="pokemons">
 
       <li class="pokemon">
         <span class="number">#001</span>
@@ -27,24 +27,10 @@
         </div>
       </li>
 
-      <!-- <li class="pokemon">
-        <span class="number">#001</span>
-        <span class="name">Bulbasaur</span>
-
-        <div class="details">
-          <ol class="types">
-            <li class="type">grass</li>
-            <li class="type">poison</li>
-          </ol>
-          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" alt="Bulbasaur">
-        </div>
-      </li> -->
-
-
     </ol>
   </section>
 
-
+  <script src="js/poke-api.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
