Implementando a pokeapi e construindo uma classe propria de pokemon para facilitar a inserção juntamente com o html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     </ol>
   </section>
-
+  <script src="js/pokemon-model.js"></script>
   <script src="js/poke-api.js"></script>
   <script src="js/main.js"></script>
 </body>
