Criando um botão para carregar mais pokemons

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
           <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
         </div>
       </li>
-
     </ol>
+
+    <div class="pagination">
+      <button type="button" id="loadMoreButton">
+        Load more Pokemons
+      </button>
+    </div>
   </section>
   <script src="js/pokemon-model.js"></script>
   <script src="js/poke-api.js"></script>
