--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <ol id="pokemonList" class="pokemons">
 
-      <li class="pokemon">
+      <!-- <li class="pokemon">
         <span class="number">#001</span>
         <span class="name">Bulbasaur</span>
 
@@ -25,7 +25,7 @@
           </ol>
           <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
         </div>
-      </li>
+      </li> -->
     </ol>
 
     <div class="pagination">
